Weekly OpenApiDocs Download.

--- a/openApiDocs/beta/ChangeNotifications.yml
+++ b/openApiDocs/beta/ChangeNotifications.yml
@@ -163,7 +163,7 @@ paths:
         required: true
       responses:
         2XX:
-          description: ''
+          description: Success
           content:
             application/json:
               schema:
