--- a/openApiDocs/v1.0/Compliance.yml
+++ b/openApiDocs/v1.0/Compliance.yml
@@ -59,7 +59,7 @@ paths:
         required: true
       responses:
         2XX:
-          description: ''
+          description: Success
           content:
             application/json:
               schema:
